# gameauto

./: .gitignore  MANIFEST.in  README.md  main.spec  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-app.yml  python-release.yml
docs/: DEVELOPER_GUIDE.md  SETUP_COMPLETION_REPORT.md
gameauto/: __init__.py  __main__.py  base.py  gameconstants.py  ocr.py  utils.py
gameauto/base/: __init__.py  action.py  command.py  constants.py  ctx.py  game.py  gui.py  position.py  task.py  tuples.py
gameauto/base/gui/: __init__.py  adb.py  base.py  mock.py  pyautogui.py
gameauto/octopath/: __init__.py  constants.py  ctx.py  status.py
gameauto/octopath/actions/: __init__.py  base.py  click.py
gameauto/octopath/commands/: __init__.py  base.py  change_place.py  change_town.py  check_status.py  click.py  combat.py  control.py  daily.py  dev.py  enter_hotel_sleep.py  force.py  gameboard.py  map.py  test.py  wait.py
gameauto/octopath/constants/: __init__.py  assets.py  enemy.py  icons.py  scene.py  towns.py  wild.py
gameauto/octopath/tasks/: __init__.py  script_task.py
gameauto/octpath/: __init__.py
gameauto/octpath/basic/: base_command.py
gameauto/octpath/farm/: bianyu_farm.py
hooks/: hook-cnocr.py
test/: pyautogui.py  test_octopath_checkstatus.py
test/otcopath/: run_command.py  test_control.py  test_get_command.py  test_octopath_checkstatus.py  test_search_image.py
test/otcopath/scripts/: 1.txt  dev.txt  test_battle_and_end_battle.txt  test_change_to_wild.txt  test_change_town.txt  test_change_town_2.txt  test_click_mini_map.txt  test_daily_get_items.txt  test_enter_hotel_sleep.txt  test_farm_honar1.txt  test_farm_in_hot_cave.txt  test_farm_in_orginal_cave.txt  test_farm_in_the_beast_village.txt  test_farm_in_the_delta.txt  test_farm_in_the_haven.txt  test_farm_in_the_hell.txt  (+28 more)
(+20 files in other folders)
