[project]
name = "gameauto"
version = "0.0.1"
authors = [
  { name = "esfak47", email = "esfak47@gmail.com" },
]
dependencies = [
    "pyautogui",
    "paddlehub==2.4.0",
    "paddlepaddle==2.1.2",
    "shapely",
    "pyclipper"
]
description = "A simple game automation library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/imbatony/gameauto"
"Bug Tracker" = "https://github.com/imbatony/gameauto/issues"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
filterwarnings = [
    "ignore"
]
